--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "serve": "webpack-dev-server",
+    "serve": "webpack serve",
     "build": "webpack"
   },
   "devDependencies": {
     "@fullcalendar/core": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
     "css-loader": "^6.7.1",
     "fullcalendar": "^5.11.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.9",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
