--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "devDependencies": {
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/list": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "css-loader": "^6.7.1",
     "fullcalendar": "^5.11.0",
     "style-loader": "^3.3.1",
