--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "fullcalendar": "^5.11.0",
     "style-loader": "^3.3.1",
